# libmanifesto

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile.am  README.md  configure.ac  manifecto.c  manifestoxx.cpp
docs/: Doxyfile.in
src/: Makefile.am  manifesto.pc.in  manifestoxx.pc.in
src/manifecto/: manifest-generator.c  manifest-parser.c  manifest.h  manifest_.h  parse-args.c  parse-args.h  sgetline.c  sgetline.h
src/manifestoxx/: BundleClass.h  BundleDescriptor.cpp  BundleDescriptor.h  CPortDescriptor.cpp  CPortDescriptor.h  Descriptor.cpp  Descriptor.h  InterfaceDescriptor.cpp  InterfaceDescriptor.h  Manifest.cpp  Manifest.h  ManifestHeader.cpp  ManifestHeader.h  MnfbGenerator.cpp  MnfbGenerator.h  MnfsParser.cpp  MnfsParser.h  StringDescriptor.cpp  StringDescriptor.h
test/: CMakeLists.txt  Makefile.am  manifestoxx-test.cpp
